# amr-fma

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  TODO.md  main.py  pyproject.toml
amr_fma/core/: __init__.py  checkpointing.py  dummy_experiment.py  env.py  manifest.py  models.py  paths.py
amr_fma/data/: loading.py
amr_fma/eval/: observability.py  splits.py
amr_fma/fma/: callbacks.py  full_sft.py  lora_sft.py  training_config.py
cluster/: Dockerfile  README.md  build.sh  debug.sbatch  env.toml  p1_lora_array.sbatch  train.sbatch
configs/: config.yaml  config_full_sft.yaml  pilot_tinygpt2.yaml  simple_lora.yaml
configs/checkpointing/: default.yaml
configs/dataset/: chatdoctor.yaml  python_code.yaml
configs/evaluation/: disabled.yaml  steps.yaml
configs/example/: pilot_tinygpt2.yaml
configs/lora/: default.yaml
configs/model/: llama3_8b.yaml  tinygpt2.yaml
configs/optimization/: default.yaml  full_sft.yaml  lora_full.yaml
configs/runtime/: cpu.yaml  gpu.yaml
configs/sequence/: default.yaml
docs/: tips_and_tricks.md
scripts/: run_full_sft.py  run_lora_sft.py
tests/: test_checkpointing.py  test_compute_eval_metrics.py  test_dummy_manifest.py  test_eval_observability.py  test_eval_splits.py  test_full_sft.py  test_lora_sft_smoke.py  test_manifest_callbacks.py  test_training_config_validation.py
